# nbla-go-zero

./: CMakeLists.txt  README.md  gendata.cpp  selfplay.cpp  train.cpp  verify.cpp
apps/: CMakeLists.txt
apps/demo/: CMakeLists.txt  gendata.cpp  selfplay.1.cpp  selfplay.cpp  test_board.cpp  verify.cpp
apps/demo/dlib/: array2d.h  ui.h
apps/demo/dlib/gui_core/: gui_core_kernel_2.h
apps/demo/dlib/matrix/: generic_image.h  matrix_data_layout.h  matrix_exp.h  matrix_mat.h  matrix_utilities.h  memory_manager_stateless_kernel_1.h  vector.h
apps/demo/dlib/threads/: threaded_object_extension.h
apps/leela/: CMakeLists.txt  FastBoard.h  FastState.cpp  GameState.cpp  GameState.h  Leela.h  Network.cpp  Training.h  UCTNode.cpp  UCTNode.h
apps/model/: Board.cpp  Board.h  CMakeLists.txt  convert.cpp  convert.hpp  utils.hpp  zero_model.hpp
apps/simplemodel/: CMakeLists.txt  algs.h  game.cpp  model.h  zero_model.hpp
apps/simplemodel/dnn/: cpu_dlib.cpp  cuda_dlib.cu  cuda_dlib.h  cudnn_dlibapi.cpp  cudnn_dlibapi.h  tensor.h  tensor_tools.cpp
apps/simplemodel/matrix/: matrix.h  matrix_mat.h  matrix_math_functions.h  matrix_subexp.h
backface/: CMakeLists.txt  main.cpp  spy.cpp  spy.h
dlib/: pixel.h  ui.cpp
engine/: CMakeLists.txt  MODIFY  defs.h  game.cpp  gtp.cpp  gtp.h  nn.h
engine/AQ/: aq.cpp  main.cpp  main.h  nueral_net.cpp  nueral_net.h  search.cpp
engine/aq/: aq.cpp  aq.h  board.cpp  distance.cpp  feed_tensor.h  nueral_net.cpp  nueral_net.h
engine/leela/: FastBoard.cpp  Interface.h  Leela.cpp  Leela.h  NNCache.cpp  Network.cpp  Network.h  Training.cpp  UCTSearch.cpp  Utils.h
foxface/: main.cpp  spy.cpp  spy.h  utils.h
goengine/: CMakeLists.txt  Leela.cpp  Leela.h  aq.cpp  (+5 more)
gomodel/: CMakeLists.txt  error.h  model.cpp  model.h
gomodel/alphago/: graph.pb.cpp  graph.pb.h  load.cpp
gomodel/dnn/: core.h  cpu_dlib.cpp  cpu_dlib.h  cuda_dlib.cu  cuda_utils.h  cudnn_dlibapi.cpp  cudnn_dlibapi.h  gpu_data.h  layers.h  tensor_tools.cpp  tensor_tools.h
gomodel/google/protobuf/: descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  dynamic_message.cc  generated_message_reflection.cc  generated_message_reflection.h  generated_message_table_driven.cc  generated_message_table_driven_lite.cc  generated_message_table_driven_lite.h  generated_message_util.cc  generated_message_util.h  implicit_weak_message.h  map_entry_lite.h  map_type_handler.h  message.cc  message.h  message_lite.cc  message_lite.h  wire_format.cc  wire_format.h  wire_format_lite.cc  wire_format_lite.h  wire_format_lite_inl.h
gomodel/google/protobuf/stubs/: stringpiece.cc  stringpiece.h
gomodel/matrix/: matrix_data_layout.h  matrix_utilities.h
leela/: CMakeLists.txt  FastBoard.cpp  FastBoard.h  FastState.cpp  FastState.h  GTP.cpp  GTP.h  GameState.cpp  GameState.h  Leela.cpp  Leela.h  NNCache.h  Network.cpp  Network.h  UCTNode.cpp  UCTNode.h  UCTSearch.cpp  UCTSearch.h  Utils.cpp  Utils.h  Zobrist.cpp  Zobrist.h  nn.cpp  nn.h  size_info.h
leela/cmake_utils/: cmake_find_blas.txt
leela/cmake_utils/test_for_cuda/: CMakeLists.txt
leela/cmake_utils/test_for_cudnn/: CMakeLists.txt
leela/nn/dnn/: core.h  cpu_dlib.cpp  cpu_dlib.h  cuda_dlib.h  cudnn_dlibapi.cpp  cudnn_dlibapi.h  gpu_data.cpp  layers.h  tensor.h  tensor_tools.cpp  tensor_tools.h
leela/nn/matrix/: algs.h  matrix_blas_bindings.h
model/: Board.cpp  Board.h  CMakeLists.txt  convert.cpp  convert.hpp  gendata.cpp  sgf.cpp  train.cpp  verify.cpp  zero_model.cpp  zero_model.hpp
nblapp/: CMakeLists.txt  defs.hpp  ops.cpp  ops.hpp  solver.cpp  solver.hpp  variable.cpp  variable.hpp
nnabla/: CMakeLists.txt
nnabla-lite/: CMakeLists.txt
nnabla-lite/build-tools/code_generator/utils/: common.py
nnabla-lite/src/nbla/: function.cpp  function.hpp  model.cpp  nd_array.cpp  nd_array.hpp  variable.cpp  variable.hpp
nnabla-lite/src/nbla/computation_graph/: computation_graph.cpp  computation_graph.hpp  function.cpp  function.hpp  variable.cpp  variable.hpp
nnabla-lite/src/nbla/cuda/: common.hpp  cuda.cpp  cuda.hpp  init.cpp  relu.hpp
nnabla-lite/src/nbla/cuda/cudnn/: cudnn.cpp  cudnn.hpp  init.cpp
nnabla-lite/src/nbla/cuda/cudnn/function/: add2.cu  add2.hpp  convolution.cu  convolution.hpp  relu.cu  relu.hpp  softmax.cu  softmax.hpp  tanh.cu  tanh.hpp
nnabla-lite/src/nbla/cuda/function/: add2.cu  add2.hpp  affine.cu  affine.hpp  batch_normalization.cu  batch_normalization.hpp  convolution.cu  convolution.hpp  mul_scalar.cu  mul_scalar.hpp  relu.cu  relu.hpp  softmax.cu  softmax.hpp
nnabla-lite/src/nbla/cuda/function/utils/: base_transform_binary.cuh  base_transform_binary.hpp  base_transform_unary.cuh  base_transform_unary.hpp
nnabla-lite/src/nbla/function/: add2.cpp  add2.hpp  affine.cpp  affine.hpp  batch_normalization.cpp  batch_normalization.hpp  convolution.cpp  convolution.hpp  mul_scalar.cpp  mul_scalar.hpp  relu.cpp  relu.hpp  sink.cpp  sink.hpp  softmax.cpp  softmax.hpp  tanh.hpp
nnabla-lite/src/nbla/function/utils/: base_transform_binary.hpp  base_transform_unary.hpp
nnabla/build-tools/code_generator/: generate.py
nnabla/python/src/nnabla_ext/cuda/cudnn/: _version.py
nnabla/src/nbla/cuda/: init.cpp
nnabla/src/nbla/cuda/cudnn/: init.cpp
selfplay/: CMakeLists.txt  algs.h  selfplay.cpp
selfplay/gui_core/: gui_core_kernel_1.cpp  gui_core_kernel_2.cpp
selfplay/matrix/: matrix.h  matrix_op.h  rectangle.h
selfplay/threads/: binary_search_tree_kernel_1.h  set_kernel_1.h  threads_kernel_shared.h
train/: CMakeLists.txt  MODIFY  board_train.cpp  selfplay.cpp  train.cpp  verify.cpp
train/dlib/: assert.h  error.h  uintn.h
train/dlib/matrix/: rectangle.h
train/dlib/threads/: set_kernel_c.h
train/leela/: CMakeLists.txt  FastBoard.cpp  FastBoard.h  FastState.h  GTP.h  Leela.cpp  Network.cpp  Network.h  UCTSearch.cpp  UCTSearch.h  Utils.cpp  Utils.h
train/model/: Board.h  CMakeLists.txt  defs.hpp  sgf.cpp  sgf.hpp  zero_model.cpp
train/nblapp/: context.hpp  ops.hpp  parameter.cpp  parameter.hpp  variable.cpp  variable.hpp
train/nnabla/: CMakeLists.txt
train/nnabla/src/nbla/cuda/: init.cpp
(+93 files in other folders)
